--- a/boards/templates/board.html
+++ b/boards/templates/board.html
@@ -12,14 +12,16 @@
 {% block content %}
 <div class="wrapper">
     <div class="head">
-        <h1>TIC TAC TOE</h1>
+        <h1>Whiteboard</h1>
          <h3>Welcome to board_{{board_code}}</h3>
         <div id="board_code" board_code = {{board_code}}></div>
-
-        <button onclick="ping()">Ping</button>
     </div>
 </div>
 {% endblock content %}
+
+<canvas id="board_canvas">
+    Sorry, your browser does not support HTML5 canvas technology.
+</canvas>
 
 {% block javascript %}
     <script src = "{% static 'js/boards.js' %}"></script>
